JSON/Java API consistency with Clojure, #2987
